Fixes some warnings